OpenAPI Doc added (SpringFox not working)